<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".encuestas">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:weightSum="1"
        android:gravity="fill_horizontal|fill_vertical">


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/actividad"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_de_ni_os"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="49dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/valoraci_n_del_educador"
            android:id="@+id/textView5"/>

        <RatingBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:rating="3.5"
            android:layout_marginBottom="47dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dia_encuestado"
            android:id="@+id/textView3"
            android:layout_weight="7.76" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="49dp" />


        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comentarios"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1">

        </EditText>


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/guardar_encuesta"
            android:id="@+id/button6"
            android:onClick="buttonClick"
            android:layout_marginBottom="69dp" />


    </LinearLayout>
</ScrollView>
